# pos-desktop

./: .env.example  .gitmodules  composer.json  modules_statuses.json
Modules/AIBot/resources/views/: index.blade.php
Modules/Account/app/Models/: Account.php  Loan.php
Modules/Account/app/Services/: LoanOverviewTooltipService.php  LoanService.php
Modules/Account/routes/: web.php
Modules/Auth/app/Services/: AuthService.php  GoogleAuthService.php
Modules/Auth/routes/: web.php
Modules/Business/app/Models/: Business.php
Modules/Business/resources/views/: profile.blade.php
Modules/Business/routes/: web.php
Modules/HRManagement/app/Models/: Employee.php  PayrollCycle.php  PayrollRule.php
Modules/HRManagement/app/Services/: EmployeePortalProvisioningService.php  EmployeePortalService.php  EmployeeService.php  HrHubSummaryService.php  PayrollComponentBuilderService.php  PayrollComputationService.php  PayrollRuleEvaluationService.php  PayrollSalarySheetPresentationService.php
Modules/HRManagement/resources/views/: hr-hub-inbox-aside.blade.php  index.blade.php
Modules/HRManagement/routes/: web.php
Modules/Pos/app/Services/: PosCatalogService.php  PosProductQuickCreateService.php
app/Http/Controllers/: DashboardController.php
app/Models/: User.php
config/: services.php
database/seeders/: AuthLoginSeeder.php  DatabaseSeeder.php
desktop/: CMakeLists.txt
desktop/src/: MainWindow.cpp  main.cpp
pos_desktop/: README.md
resources/views/: admin.blade.php  dashboard.blade.php
routes/: web.php
tests/Unit/: PayrollRuleEvaluationServiceTest.php
(+37 files in other folders)
